--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,17 +13,43 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: lowlighter/metrics@latest
+      - name: basic
+        uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+          filename: metrics.basic.svg
+          config_timezone: Asia/Shanghai
+          user: XieJiSS
+          base: header, repositories
+      - name: achievements
+        uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
+          filename: metrics.achievements.svg
           user: XieJiSS
           template: classic
           base: ""
           config_timezone: Asia/Shanghai
-          plugin_topics: yes
-          plugin_topics_limit: 0
-          plugin_topics_mode: icons
           plugin_achievements: yes
           plugin_achievements_secrets: yes
           plugin_achievements_threshold: B
-          config_order: topics, achievements
+      - name: calendar
+        uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
+          filename: metrics.isocalendar.svg
+          user: XieJiSS
+          base: ""
+          config_timezone: Asia/Shanghai
+          plugin_isocalendar: yes
+      - name: recent-language
+        uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
+          filename: metrics.recent_language.svg
+          user: XieJiSS
+          config_timezone: Asia/Shanghai
+          plugin_languages: yes
+          plugin_languages_sections: recently-used
+          plugin_languages_recent_load: 400
+          plugin_languages_recent_days: 14
