--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,15 +33,19 @@ jobs:
           plugin_achievements: yes
           plugin_achievements_secrets: yes
           plugin_achievements_threshold: B
-      - name: calendar
+      - name: calendar and rss
         uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          filename: metrics.isocalendar.svg
+          filename: metrics.calendar_rss.svg
           user: XieJiSS
           base: ""
           config_timezone: Asia/Shanghai
           plugin_isocalendar: yes
+          plugin_rss: yes
+          plugin_rss_source: http://blog.jiejiss.com/atom.xml
+          plugin_rss_limit: 3
+          config_order: isocalendar, rss
       - name: recent-language
         uses: lowlighter/metrics@latest
         with:
@@ -55,3 +59,8 @@ jobs:
           plugin_languages_recent_load: 400
           plugin_languages_recent_days: 180
           plugin_languages_analysis_timeout: 30
+          plugin_languages_colors: github
+          plugin_languages_limit: 7
+          plugin_languages_ignored: html, css
+          plugin_languages_details: bytes-size, percentage
+          commits_authoring: c141028@gmail.com, immellonji@yandex.com, 24671280+XieJiSS@users.noreply.github.com, XieJiSS@users.noreply.github.com
