--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,19 +46,16 @@ jobs:
           plugin_rss_source: http://blog.jiejiss.com/atom.xml
           plugin_rss_limit: 3
           config_order: isocalendar, rss
-      - name: recent-language
+      - name: language
         uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          filename: metrics.recent_language.svg
+          filename: metrics.language.svg
           user: XieJiSS
           base: ""
           config_timezone: Asia/Shanghai
           plugin_languages: yes
-          plugin_languages_sections: recently-used
-          plugin_languages_recent_load: 400
-          plugin_languages_recent_days: 180
-          plugin_languages_analysis_timeout: 30
+          plugin_languages_analysis_timeout: 40
           plugin_languages_colors: github
           plugin_languages_limit: 7
           plugin_languages_ignored: html, css
